@@ -141,21 +141,24 @@
  *             server must support the QUOTAROOT command to use this driver.
  *             This is the RECOMMENDED way of handling quotas.
  *
- * smtp: (array) If Horde is configured to use SMTP as the mailer, entries in
- *   this array will overwrite the default Horde SMTP parameters. The
- *   following configuration parameters are available:
+ * smtp: (array) If Horde is configured to use SMTP as the mailer, entries
+ *   defined in this array will overwrite the default Horde SMTP parameters.
+ *   These configuration parameters are available:
  *     - auth: (integer|boolean) Authentication method to use. Set to boolean
  *             true to choose the best available authenticate method
  *             (RECOMMENDED).
  *     - debug: (string) If set, enables SMTP debugging. See the 'debug'
- *              parameter below for acceptable values.
+ *              parameter below (under the 'Debugging Properties' header)
+ *              for acceptable values.
  *     - host: (string) SMTP server host.
+ *     - imp_auth: (boolean) If true, automatically populates the 'password'
+ *                 and 'username' parameters with IMP's authentication
+ *                 credentials. (Not needed if IMP's authentication
+ *                 credentials are identical to Horde's.)
  *     - localhost: (string) The local hostname.
- *     - password: (string) Password to use for SMTP server authentication (if
- *                 not set, uses Horde authentication password).
+ *     - password: (string) Password to use for SMTP server authentication.
  *     - port: (integer) SMTP server port.
- *     - username: (string) Username to use for SMTP server authentication (if
- *                 not set, uses Horde authentication username).
+ *     - username: (string) Username to use for SMTP server authentication.
  *
  * spam: (array) Spam reporting configuration. This array can contain two
  *   keys - 'innocent' and 'spam' - that defines the behavior when a user
@@ -373,8 +376,9 @@ $servers['advanced'] = array(
     'smtp' => array(
     //    'auth' => true,
     //    'debug' => false,
-    //    'localhost' => 'localhost',
     //    'host' => 'smtp.example.com',
+    //    'imp_auth' => false,
+    //    'localhost' => 'localhost',
     //    'password' => null,
     //    'port' => 25,
     //    'username' => null
